Removing name from students and repalced it with firstname and surname and added group route to get all groups
