# docs/swagger.json
@@ -283,6 +283,110 @@
                 }
             }
         },
+        "/groups": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Retrieve groups",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Group"
+                ],
+                "summary": "Get all groups",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Group"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Create a new group",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Group"
+                ],
+                "summary": "Create a new group",
+                "parameters": [
+                    {
+                        "description": "Group Info",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.GroupRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/schedule": {
             "post": {
                 "security": [
@@ -905,6 +1009,25 @@
                 }
             }
         },
+        "model.Group": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.GroupRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "model.LoginRequest": {
             "type": "object",
             "properties": {
@@ -1013,6 +1136,9 @@
                 "birth_date": {
                     "type": "string"
                 },
+                "firstname": {
+                    "type": "string"
+                },
                 "gender": {
                     "type": "string"
                 },
@@ -1025,7 +1151,7 @@
                 "id": {
                     "type": "integer"
                 },
-                "name": {
+                "surname": {
                     "type": "string"
                 },
                 "user_id": {
@@ -1042,13 +1168,16 @@
                 "birth_date": {
                     "type": "string"
                 },
+                "firstname": {
+                    "type": "string"
+                },
                 "gender": {
                     "type": "string"
                 },
                 "group_id": {
                     "type": "integer"
                 },
-                "name": {
+                "surname": {
                     "type": "string"
                 },
                 "user_id": {
@@ -1065,6 +1194,9 @@
                 "birth_date": {
                     "type": "string"
                 },
+                "firstname": {
+                    "type": "string"
+                },
                 "gender": {
                     "type": "string"
                 },
@@ -1077,8 +1209,11 @@
                 "id": {
                     "type": "integer"
                 },
-                "name": {
+                "surname": {
                     "type": "string"
+                },
+                "year": {
+                    "type": "integer"
                 }
             }
         },
