# model/student.go
@@ -4,7 +4,8 @@ import "time"
 
 type Student struct {
 	ID        int       `json:"id"`
-	Name      string    `json:"name"`
+	Firstname string    `json:"firstname"`
+	Surname   string    `json:"surname"`
 	GroupID   int       `json:"group_id"`
 	GroupName string    `json:"group_name"`
 	BirthDate time.Time `json:"birth_date"`
@@ -15,15 +16,18 @@ type Student struct {
 
 type StudentResponse struct {
 	ID        int    `json:"id"`
-	Name      string `json:"name"`
+	Firstname string `json:"firstname"`
+	Surname   string `json:"surname"`
 	BirthDate string `json:"birth_date"`
+	Year      int    `json:"year"`
 	GroupID   int    `json:"group_id"`
 	GroupName string `json:"group_name"`
 	Gender    string `json:"gender"`
 }
 
 type StudentRequest struct {
-	Name      string    `json:"name"`
+	Firstname string    `json:"firstname"`
+	Surname   string    `json:"surname"`
 	GroupID   int       `json:"group_id"`
 	BirthDate time.Time `json:"birth_date"`
 	Year      int       `json:"year"`
