# pkg/handler/student_handler.go
@@ -66,7 +66,8 @@ func (h *StudentHandler) GetStudentByID(c echo.Context) error {
 	}
 	data := model.StudentResponse{
 		ID:        stud.ID,
-		Name:      stud.Name,
+		Firstname: stud.Firstname,
+		Surname:   stud.Surname,
 		BirthDate: stud.BirthDate.Format("2006-01-02"),
 		GroupID:   stud.GroupID,
 		GroupName: stud.GroupName,
@@ -122,7 +123,8 @@ func (h *StudentHandler) UpdateStudent(c echo.Context) error {
 	}
 	stud := &model.Student{
 		ID:        id,
-		Name:      req.Name,
+		Firstname: req.Firstname,
+		Surname:   req.Surname,
 		GroupID:   req.GroupID,
 		BirthDate: req.BirthDate,
 		UserId:    req.UserId,
@@ -146,9 +148,22 @@ func (h *StudentHandler) UpdateStudent(c echo.Context) error {
 // @Failure 500 {object} map[string]string
 // @Router /student/all [get]
 func (h *StudentHandler) GetAllStudents(c echo.Context) error {
-	data, err := h.StudentService.GetAllStudents()
+	studs, err := h.StudentService.GetAllStudents()
 	if err != nil {
 		return c.JSON(http.StatusInternalServerError, map[string]string{"error": err.Error()})
+	}
+	var data []model.StudentResponse
+	for _, stud := range studs {
+		data = append(data, model.StudentResponse{
+			Firstname: stud.Firstname,
+			Surname:   stud.Surname,
+			BirthDate: stud.BirthDate.Format("2006-01-02"),
+			Gender:    stud.Gender,
+			Year:      stud.Year,
+			ID:        stud.ID,
+			GroupID:   stud.GroupID,
+			GroupName: stud.GroupName,
+		})
 	}
 
 	return c.JSON(http.StatusOK, data)
